--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,113 @@
+# ...existing code...
 __pycache__/
+
+# Byte-compiled / optimized
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
+.eggs/
+pip-wheel-metadata/
+
+# Virtual environments
+venv/
+.venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Python tooling caches
+.pytest_cache/
+.mypy_cache/
+.tox/
+.coverage
+coverage.xml
+htmlcov/
+
+# Flask instance folder and local config
+instance/
+*.sqlite3
+*.db
+
+# Env files / secrets
+.env
+.env.* 
+
+# Logs
+*.log
+
+# IDE / OS files
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+.DS_Store
+Thumbs.db
+
+# Misc
+.cache/
+node_modules/
+```// filepath: /workspaces/codespaces-flask/.gitignore
+# ...existing code...
+__pycache__/
+
+# Byte-compiled / optimized
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
+.eggs/
+pip-wheel-metadata/
+
+# Virtual environments
+venv/
+.venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Python tooling caches
+.pytest_cache/
+.mypy_cache/
+.tox/
+.coverage
+coverage.xml
+htmlcov/
+
+# Flask instance folder and local config
+instance/
+*.sqlite3
+*.db
+
+# Env files / secrets
+.env
+.env.* 
+
+# Logs
+*.log
+
+# IDE / OS files
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+.DS_Store
+Thumbs.db
+
+# Misc
+.cache/
+node_modules/
