--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask>=2.0
-astral>=3.0
-suntime>=0.8
-requests>=2.28
-pytz
+Flask>=3.0
+astral>=3.2
+requests>=2.31
+pytz>=2024.1
 gunicorn>=21.0
+
+# Testing
+pytest>=8.0
+pytest-flask>=1.3
