--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
-Flask>=3.0
+# Core Flask
+Flask>=3.0.0
+Werkzeug>=3.0.0
+
+# HTTP requests
+requests>=2.28.0
+
+# Timezone handling
+pytz>=2023.3
+
+# Solar calculations (try astral first, fallback to suntime)
 astral>=3.2
-requests>=2.31
-pytz>=2024.1
-gunicorn>=21.0
 
 # Testing
-pytest>=8.0
-pytest-flask>=1.3
+pytest>=7.4.0
+pytest-cov>=4.1.0
+
+# Optional: suntime as fallback
+suntime>=1.2.5
